[gd_scene load_steps=5 format=3 uid="uid://b06y4gx4xf1rt"]

[ext_resource type="Script" path="res://scenes/uis/inventory/inventory_slot.gd" id="1_qibq2"]
[ext_resource type="Texture2D" uid="uid://bb8ofsfeayamn" path="res://assets/images/commons/items/ManaPotion.png" id="2_yingw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a8un2"]
bg_color = Color(0.117647, 0.117647, 0.117647, 0.572549)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_homke"]

[node name="InventorySlot" type="Control"]
custom_minimum_size = Vector2(85, 85)
layout_mode = 3
anchors_preset = 0
offset_right = 85.0
offset_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_qibq2")

[node name="SlotPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 85.0
offset_bottom = 85.0

[node name="MarginContainer" type="MarginContainer" parent="SlotPanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ItemSprite" type="Sprite2D" parent="SlotPanel/MarginContainer"]
position = Vector2(42.5, 42.5)
texture = ExtResource("2_yingw")

[node name="QuantityPanel" type="PanelContainer" parent="SlotPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_a8un2")

[node name="MarginContainer" type="MarginContainer" parent="SlotPanel/MarginContainer/QuantityPanel"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 3
theme_override_constants/margin_right = 3

[node name="QuantityLabel" type="Label" parent="SlotPanel/MarginContainer/QuantityPanel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
text = "1"

[node name="ItemButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_homke")

[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
